--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@ng-icons/remixicon": "^29.10.0",
     "@ng-icons/simple-icons": "^29.10.0",
     "@ng-icons/svgl": "^30.2.0",
+    "@ngrx/component-store": "^19.0.0",
     "@ngrx/effects": "^19.0.0",
     "@ngrx/entity": "^19.0.0",
     "@ngrx/router-store": "^19.0.0",
     "@ngrx/store": "^19.0.0",
+    "@ngrx/store-devtools": "^19.0.0",
     "highlight.js": "^11.11.0",
     "ngx-highlightjs": "^12.0.0",
     "rxjs": "~7.8.1",
@@ -42,6 +44,7 @@
     "@angular-devkit/schematics": "^19.0.6",
     "@angular/cli": "^19.0.6",
     "@angular/compiler-cli": "^19.0.5",
+    "@ngrx/schematics": "^19.0.0",
     "@nx/angular": "20.3.1",
     "@nx/workspace": "20.3.1",
     "@schematics/angular": "^19.0.6",
@@ -49,6 +52,7 @@
     "autoprefixer": "^10.4.20",
     "daisyui": "^4.12.22",
     "jasmine-core": "~5.5.0",
+    "jasmine-marbles": "~0.9.1",
     "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.1",
