fix language switching

--- a/project.json
+++ b/project.json
@@ -100,6 +100,9 @@
         ],
         "scripts": []
       }
+    },
+    "transloco:optimize": {
+      "command": "transloco-optimize dist/website/assets/i18n"
     }
   }
 }
