--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@angular-devkit/schematics": "^19.0.6",
     "@angular/cli": "^19.0.6",
     "@angular/compiler-cli": "^19.0.5",
+    "@jsverse/transloco-optimize": "^7.0.1",
     "@ngrx/schematics": "^19.0.0",
     "@nx/angular": "20.3.1",
     "@nx/workspace": "20.3.1",
@@ -51,6 +52,7 @@
     "@types/jasmine": "~5.1.5",
     "autoprefixer": "^10.4.20",
     "daisyui": "^4.12.22",
+    "install": "^0.13.0",
     "jasmine-core": "~5.5.0",
     "jasmine-marbles": "~0.9.1",
     "karma": "~6.4.4",
@@ -58,6 +60,7 @@
     "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "npm": "^11.0.0",
     "nx": "20.3.1",
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
