move assets to public folder

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
   "i18n-ally.enabledFrameworks": ["transloco"],
   "i18n-ally.keystyle": "nested",
   "i18n-ally.sourceLanguage": "it",
-  "i18n-ally.localesPaths": "src/assets/i18n",
+  "i18n-ally.localesPaths": ["public/i18n"],
   "i18n-ally.namespace": true,
-  "i18n-ally.pathMatcher": "{namespaces?}/||{locale}.{ext}"
+  "i18n-ally.pathMatcher": "{namespaces?}/{locale}.{ext}"
 }
