--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.0.5",
-    "@angular/cdk": "^19.0.4",
-    "@angular/common": "^19.0.5",
-    "@angular/compiler": "^19.0.5",
-    "@angular/core": "^19.0.5",
-    "@angular/forms": "^19.0.5",
-    "@angular/platform-browser": "^19.0.5",
-    "@angular/platform-browser-dynamic": "^19.0.5",
-    "@angular/router": "^19.0.5",
+    "@angular/animations": "19.2.1",
+    "@angular/cdk": "19.2.2",
+    "@angular/common": "19.2.1",
+    "@angular/compiler": "19.2.1",
+    "@angular/core": "19.2.1",
+    "@angular/forms": "19.2.1",
+    "@angular/platform-browser": "19.2.1",
+    "@angular/platform-browser-dynamic": "19.2.1",
+    "@angular/router": "19.2.1",
     "@jsverse/transloco": "^7.5.0",
     "@ng-icons/akar-icons": "^29.10.0",
     "@ng-icons/core": "^29.10.0",
@@ -39,16 +39,16 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.0.6",
-    "@angular-devkit/core": "^19.0.6",
-    "@angular-devkit/schematics": "^19.0.6",
+    "@angular-devkit/build-angular": "19.2.1",
+    "@angular-devkit/core": "19.2.1",
+    "@angular-devkit/schematics": "19.2.1",
     "@angular/cli": "^19.0.6",
-    "@angular/compiler-cli": "^19.0.5",
+    "@angular/compiler-cli": "19.2.1",
     "@jsverse/transloco-optimize": "^7.0.1",
     "@ngrx/schematics": "^19.0.0",
-    "@nx/angular": "20.3.1",
-    "@nx/workspace": "20.3.1",
-    "@schematics/angular": "^19.0.6",
+    "@nx/angular": "20.5.0",
+    "@nx/workspace": "20.5.0",
+    "@schematics/angular": "19.2.1",
     "@types/jasmine": "~5.1.5",
     "autoprefixer": "^10.4.20",
     "daisyui": "^4.12.22",
@@ -61,11 +61,11 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "npm": "^11.0.0",
-    "nx": "20.3.1",
+    "nx": "20.5.0",
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
     "tailwindcss": "^3.4.17",
     "tailwindcss-opentype": "^1.1.0",
-    "typescript": "~5.6.3"
+    "typescript": "5.7.3"
   }
 }
