--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ngrx/router-store": "^19.0.0",
     "@ngrx/store": "^19.0.0",
     "@ngrx/store-devtools": "^19.0.0",
+    "@tailwindcss/postcss": "^4.0.13",
     "highlight.js": "^11.11.0",
     "ngx-highlightjs": "^12.0.0",
     "rxjs": "~7.8.1",
@@ -51,7 +52,7 @@
     "@schematics/angular": "19.2.1",
     "@types/jasmine": "~5.1.5",
     "autoprefixer": "^10.4.20",
-    "daisyui": "^4.12.22",
+    "daisyui": "^5.0.3",
     "install": "^0.13.0",
     "jasmine-core": "~5.5.0",
     "jasmine-marbles": "~0.9.1",
@@ -62,9 +63,9 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "npm": "^11.0.0",
     "nx": "20.5.0",
-    "postcss": "^8.4.49",
+    "postcss": "^8.5.3",
     "prettier": "^3.4.2",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.0.13",
     "tailwindcss-opentype": "^1.1.0",
     "typescript": "5.7.3"
   }
