--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@ngrx/store-devtools": "^19.0.1",
     "@tailwindcss/postcss": "^4.0.15",
     "@tailwindcss/vite": "^4.0.15",
+    "hammerjs": "^2.0.8",
     "highlight.js": "^11.11.1",
     "ngx-highlightjs": "^14.0.0",
     "rxjs": "~7.8.2",
@@ -51,6 +52,7 @@
     "@nx/angular": "20.6.3",
     "@nx/workspace": "20.6.3",
     "@schematics/angular": "19.2.4",
+    "@types/hammerjs": "^2.0.46",
     "@types/jasmine": "~5.1.7",
     "autoprefixer": "^10.4.21",
     "daisyui": "^5.0.9",
